fix mobile styles
Squashed commit of the following:

commit 3a23a1735d36adac6e7586306d4224d486b6fb2d
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Apr 19 20:21:28 2023 +0300

    fix instruction list item font-size

commit cfdb6aa4240889c5a68883f95c5d1df45270acca
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Apr 19 20:10:43 2023 +0300

    fix mobile styles

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -92,9 +92,18 @@ header h3 {
 
 .mission {
   clear: both;
+  color: white;
   font-size: 1.1vw;
   margin-top: 3vw;
   padding-right: 5vw;
+}
+
+header .mission {
+  display: block;
+}
+
+footer > .mission {
+  display: none;
 }
 
 .instruction {
@@ -354,8 +363,15 @@ footer {
   .mission {
     font-size: 4vw;
     line-height: 5.5vw;
-    margin-top: 4vw;
-    padding: 0 3vw;
+    margin: 2vw 0 4vw 0;
+    padding: 0 4vw;
+    text-align: left;
+  }
+  header .mission {
+    display: none !important;
+  }
+  footer > .mission {
+    display: block !important;
   }
   .instruction {
     border-left: none;
@@ -366,7 +382,7 @@ footer {
   }
   .instruction ul li {
     position: relative;
-    font-size: 3vw;
+    font-size: 3.5vw;
     line-height: 4vw;
     margin-bottom: 2vw;
   }
@@ -380,7 +396,7 @@ footer {
     top: 11%;
   }
   .search-form {
-    margin: 8vw 0.5vw;
+    margin: 6vw 0.5vw;
     padding: 5vw 0 5vw 17vw;
     border-radius: 1vw;
     border: none;
@@ -392,7 +408,7 @@ footer {
     background-size: 8vw;
   }
   .testItem-container {
-    margin: 0 0.5vw 7vw;
+    margin: 0 0.5vw 6vw;
     padding: 5vw;
     border-radius: 1vw;
   }
